[fix] footer 클릭 안되는 오류 수정 z-index 없앰

--- a/server/static/shared.css
+++ b/server/static/shared.css
@@ -405,10 +405,10 @@ h3 {
   }
 }
 
-footer {
+/* footer {
   position: relative;
   z-index: -1;
-}
+} */
 
 .content_padding {
   padding-top: 6rem;
